replace MySQL config with Neon PostgreSQL connection